--- a/classification/classifier_template.ipynb
+++ b/classification/classifier_template.ipynb
@@ -217,9 +217,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py37]",
+   "display_name": "Python [conda env:coursera_sna]",
    "language": "python",
-   "name": "conda-env-py37-py"
+   "name": "conda-env-coursera_sna-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.5.6"
   },
   "pycharm": {
    "stem_cell": {
@@ -244,5 +244,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
